--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,10 @@
 kind: pipeline
+type: docker
 name: default
 
 steps:
 - name: test
-  image: golang
+  image: golang:1.16
   commands:
   - go build
   - go test
-  
